# WebCrawler

./: .coverage  .gitignore  Dockerfile  README.md  analyze_crawl.py  config.yaml  crawl.db-shm  crawl.db-wal  docker-compose.real.yml  docker-compose.yml  initial_spec.md  pyproject.toml
.github/: copilot-instructions.md
.github/hooks/: enforce-code-review.json
.github/hooks/scripts/: enforce-code-review.sh
.github/skills/architect/: skill.md
.github/skills/code-reviewer/: SKILL.md
.github/skills/code-writer/: SKILL.md
.github/skills/design-reviewer/: skill.md
.github/skills/pydantic-domain-variants/: SKILL.md
.github/workflows/: deploy-ecs.yml  unit-tests.yml
.kiro/skills/tdd/: SKILL.md
src/crawler/: __main__.py  content_dispatcher.py  crawler.py  fetcher.py  logger.py  metadata_store.py  rate_limiter.py  scheduler.py  types.py  url_filter.py  url_normalizer.py  worker.py  worker_pool.py
src/web_crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/integration/: test_crawl_lifecycle.py
tests/properties/: test_lease_props.py  test_rate_limiter_props.py  test_url_filter_props.py  test_url_normalizer_props.py
tests/unit/: test_cli.py  test_content_dispatcher.py  test_crawler.py  test_fetcher.py  test_html_processor.py  test_image_processor.py  test_logger.py  test_metadata_store_frontier.py  test_metadata_store_init.py  test_metadata_store_state.py  test_pdf_processor.py  test_rate_limiter.py  test_scheduler.py  test_url_filter.py  test_url_normalizer.py  test_video_processor.py  test_worker.py  test_worker_heartbeat.py  test_worker_pool.py
(+35 files in other folders)
