[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=3.17.0",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "freezegun>=1.3.0",
    "time-machine>=2.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hypothesis]
database_backend = "directory"
